--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\fathi\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=C:\\Users\\Lee\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\Lee\\flutter
 flutter.buildMode=debug
 flutter.versionName=0.1.0
